--- a/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
+++ b/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #fff;
 }
 
 .header {
@@ -26,13 +25,13 @@
 }
 
 .title {
-  font-size: 2.25rem;       
-  font-weight: 700;           
-  color: white;               
+  font-size: 1.125rem;      
+  font-weight: 700;              
   line-height: 1.25; 
-  text-align: center; 
-
+  text-align: left; 
+  
   @media (min-width: 768px) {
+    text-align: center; 
     font-size: 3rem;          
   }
 
