--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -19,10 +19,14 @@
 }
 
 .header h3 {
-  color: #fff;
+  font-size: .9rem;
+  font-weight: 700;
+  line-height: 1.25;
+  text-align: left; 
 
   @media (min-width: 768px) {
-    font-size: 24px;
+  text-align: center;
+    font-size: 1.5rem;
   }
 }
 
