--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -8,12 +8,13 @@
 .container h3 {
   margin-bottom: 8px;
   margin-left: 4px;
-  color: #fff;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.25;
+  text-align: left;
 
   @media (min-width: 768px) {
-    margin-left: 16px;
-    margin-bottom: 8px;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 }
 
