--- a/app/main/components/magazine/components/lastnews/LastNews.module.css
+++ b/app/main/components/magazine/components/lastnews/LastNews.module.css
@@ -1,3 +1,14 @@
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+
+  @media (min-width: 768px) {
+    padding: 0 16px;
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
