--- a/components/abcLoader/ABCLoader.module.css
+++ b/components/abcLoader/ABCLoader.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,11 +9,11 @@
 }
 
 .container h1 {
-  font-size: 6px;
+  font-size: 24px;
   color: white;
 
   @media (min-width: 768px) {
-    font-size: 12px;
+    font-size: 32px;
   }
 }
 
@@ -26,14 +26,5 @@
   }
   100% {
     opacity: 0;
-  }
-}
-
-.logo {
-  width: 30px;
-  margin: 0 auto;
-
-  @media (min-width: 768px) {
-    width: 50px;
   }
 }
