--- a/app/main/components/header/Header.module.css
+++ b/app/main/components/header/Header.module.css
@@ -17,7 +17,7 @@
 .bento {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(1, auto);
+  grid-template-rows: repeat(1, 320px);
   gap: 8px;
 
   @media (min-width: 1500px) {
