--- a/app/(routes)/posts/[id]/componentes/title/title.css
+++ b/app/(routes)/posts/[id]/componentes/title/title.css
@@ -1,5 +1,5 @@
 .post-content-h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-family: var(--post-title-font);
   font-weight: 700;
   line-height: 1.2;
@@ -15,7 +15,7 @@
   }
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
@@ -32,7 +32,7 @@
 
 .post-content-h2 {
   font-family: var(--post-title-font);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #1f2937;
   margin: 1.5rem 0;
@@ -45,7 +45,7 @@
   }
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     top: 50%;
