--- a/app/main/Main.module.css
+++ b/app/main/Main.module.css
@@ -19,6 +19,7 @@
   text-align: center;
   font-family: "Caveat Variable", cursive;
   margin-bottom: 20px;
+  cursor: pointer;
 
   @media (min-width: 768px) {
     height: 100px;
