--- a/app/(routes)/image/ImagePage.module.css
+++ b/app/(routes)/image/ImagePage.module.css
@@ -72,6 +72,8 @@
   text-shadow: 0 0 2px #fff;
   grid-column: 1/5;
   grid-row: 2;
+  align-self: start;
+  margin-bottom: 16px;
 
   @media (min-width: 768px) {
     color: #fff;
@@ -116,6 +118,21 @@
   width: 100%;
   padding: 8px;
   background-color: #15151e;
+
+  background-image: repeating-linear-gradient(
+      45deg,
+      rgba(255, 0, 100, 0.1) 0,
+      rgba(255, 0, 100, 0.1) 1px,
+      transparent 1px,
+      transparent 20px
+    ),
+    repeating-linear-gradient(
+      -45deg,
+      rgba(255, 0, 100, 0.1) 0,
+      rgba(255, 0, 100, 0.1) 1px,
+      transparent 1px,
+      transparent 20px
+    );
 
   @media (min-width: 768px) {
     backdrop-filter: blur(5px);
