--- a/app/(routes)/vehiculo/[id]/ImagePage.module.css
+++ b/app/(routes)/vehiculo/[id]/ImagePage.module.css
@@ -8,24 +8,35 @@
 .container {
   margin: 0 auto;
   position: relative;
-  padding: 8px;
 
   @media (min-width: 1280px) {
-    max-width: 924px;
+    max-width: 1024px;
   }
   @media (min-width: 1366px) {
-    max-width: 1450px;
+    max-width: 1440px;
   }
 }
 
-.image {
+.vehicleImage {
   weight: 100%;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 
   @media (min-width: 768px) {
     border-radius: 16px;
   }
+}
+
+.vehicleImage img {
+  width: 100%;
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .content {
@@ -37,7 +48,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     padding: 8px;
   }
 }
@@ -57,31 +68,6 @@
   }
 }
 
-.companylogo {
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-row: 1;
-  grid-column: 1/5;
-}
-
-.title {
-  font-size: var(--h1-size-mobile);
-  font-weight: 900;
-  text-shadow: 0 0 2px #fff;
-  grid-column: 1/5;
-  grid-row: 2;
-  align-self: start;
-  margin-bottom: 16px;
-
-  @media (min-width: 768px) {
-    color: #fff;
-    font-size: var(--h1-size);
-    text-shadow: 0 0 10px #000;
-  }
-}
-
 .controlview {
   display: none;
 
@@ -92,6 +78,11 @@
     justify-self: end;
     align-self: start;
     padding: 16px;
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    margin: 8px;
+    border-radius: 50%;
+    cursor: pointer;
   }
 }
 
@@ -105,10 +96,10 @@
   gap: 8px;
 
   @media (min-width: 768px) {
-    grid-row: 3;
+    grid-row: 5;
     align-self: center;
     flex-direction: row;
-    margin: 0 8px;
+    margin: 8px;
   }
 }
 
@@ -116,9 +107,8 @@
   border: solid 1px #212121;
   border-radius: 16px;
   width: 100%;
-  padding: 8px;
+  padding: 16px;
   background-color: #15151e;
-
   background-image: repeating-linear-gradient(
       45deg,
       rgba(255, 0, 100, 0.1) 0,
@@ -135,11 +125,11 @@
     );
 
   @media (min-width: 768px) {
-    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.6);
     box-shadow: 0 0 1px #fff;
     display: flex;
     justify-content: center;
-    background-color: transparent;
+
     border: none;
   }
 }
@@ -164,10 +154,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.brand {
-  width: 70px;
 }
 
 .description {
