--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -19,13 +19,13 @@
 }
 
 .header h3 {
-  font-size: .9rem;
+  font-size: 0.9rem;
   font-weight: 700;
   line-height: 1.25;
-  text-align: left; 
+  text-align: left;
 
   @media (min-width: 768px) {
-  text-align: center;
+    text-align: center;
     font-size: 1.5rem;
   }
 }
@@ -95,4 +95,16 @@
   object-fit: cover;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.image_container {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
