--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -67,6 +67,7 @@
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
+  cursor: pointer;
 
   @media (min-width: 768px) {
     margin-bottom: 16px;
@@ -77,7 +78,8 @@
   width: 95%;
   scroll-snap-align: start;
   flex-shrink: 0;
-  cursor: pointer;
+
+  position: relative;
 
   @media (min-width: 768px) {
     width: 320px;
@@ -88,4 +90,12 @@
   aspect-ratio: 16/9;
   object-fit: cover;
   border-radius: 10px;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
