--- a/components/galleryList/GalleryList.module.css
+++ b/components/galleryList/GalleryList.module.css
@@ -4,6 +4,18 @@
   position: relative;
 }
 
+.imageContainer {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
 .image {
   aspect-ratio: 1/1;
   width: 100%;
