--- a/app/(routes)/vehiculo/[id]/ImagePage.module.css
+++ b/app/(routes)/vehiculo/[id]/ImagePage.module.css
@@ -158,7 +158,7 @@
 
 .description {
   padding: 8px 0;
-  display: flex;
+  display: felx;
   justify-content: space-between;
   align-items: center;
 
