--- a/app/(routes)/vehiculo/[id]/ImagePage.module.css
+++ b/app/(routes)/vehiculo/[id]/ImagePage.module.css
@@ -22,6 +22,7 @@
   border-radius: 10px;
   overflow: hidden;
   position: relative;
+  margin: 8px 0;
 
   @media (min-width: 768px) {
     border-radius: 16px;
