--- a/app/(routes)/vehiculo/components/photograper/Photograper.module.css
+++ b/app/(routes)/vehiculo/components/photograper/Photograper.module.css
@@ -4,6 +4,7 @@
   display: felx;
   justify-content: space-between;
   align-items: center;
+  gap: 8px;
 
   h2 {
     font-size: 13px;
@@ -23,6 +24,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  margin-top: 8px;
 
   p {
     font-size: 12px;
