--- a/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
+++ b/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
@@ -1,8 +1,8 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
   width: 100%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
   gap: 4px;
 
   h2 {
@@ -19,32 +19,24 @@
   }
 }
 
+.logo {
+  grid-column: 1;
+}
+
 .brand {
   grid-column: 2;
-  grid-row: 1/2;
+  grid-row: 1/3;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.plate {
+.info {
   grid-column: 1;
   grid-row: 2;
-  align-self: center;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
   gap: 8px;
-}
-.serial {
-  grid-column: 2;
-  grid-row: 2;
-  align-self: center;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-.service {
-  grid-column: 1/3;
-  grid-row: 3;
-  align-self: center;
 }
