--- a/app/(routes)/vehiculo/components/photograper/Photograper.module.css
+++ b/app/(routes)/vehiculo/components/photograper/Photograper.module.css
@@ -1,10 +1,8 @@
 .container {
   width: 100%;
-  padding: 8px 0;
-  display: felx;
-  justify-content: space-between;
-  align-items: center;
-  gap: 8px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
 
   h2 {
     font-size: 13px;
@@ -20,18 +18,19 @@
   }
 }
 
-.photolocation {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-top: 8px;
-
-  p {
-    font-size: 12px;
-  }
+.logo {
+  grid-column: 1;
+  grid-row: 1;
 }
 
-.photolocation svg {
-  width: 15px;
-  height: 15px;
+.author {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.photolocation {
+  grid-column: 1;
+  grid-row: 3;
+  display: flex;
+  gap: 8px;
 }
