--- a/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
+++ b/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
@@ -2,7 +2,7 @@
   display: grid;
   width: 100%;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 4px;
 
   h2 {
@@ -25,18 +25,26 @@
 
 .brand {
   grid-column: 2;
-  grid-row: 1/3;
+  grid-row: 1/4;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.info {
+.plate {
   grid-column: 1;
   grid-row: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  gap: 8px;
+  align-self: center;
+}
+
+.serial {
+  grid-column: 1;
+  grid-row: 3;
+  align-self: center;
+}
+
+.service {
+  grid-column: 1/3;
+  grid-row: 4;
 }
