--- a/app/(routes)/vehiculo/components/vehiclePart/VehiclePart.module.css
+++ b/app/(routes)/vehiculo/components/vehiclePart/VehiclePart.module.css
@@ -1,15 +1,25 @@
 .container {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.logos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.logo {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.brand {
+  grid-column: 2;
+  grid-row: 1/3;
+  align-self: center;
 }
 
 .description {
-  margin-top: 8px;
+  grid-column: 1/3;
+  grid-row: 2;
+  align-self: center;
 
   h2 {
     font-size: 13px;
