--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+*::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #454545;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -36,16 +46,13 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-
     --primary-color: #f59e0b;
     /* --primary-color: #d1b000; */
     --primary-content-color: #d1d5dc;
     --secondary-color: #e53025;
     --tertiary-color: #2b71b7;
-
     --color-white: #fff;
     --color-black: #000;
-
     --h1-size-mobile: 18px;
     --h1-size: 32px;
     --h2-size: 24px;
