--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,64 +1,44 @@
 .container {
   position: sticky;
   top: 0;
-  z-index: 20;
-}
-
-.container_menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
+  z-index: 400;
+  width: 100dvw;
+  height: 60px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 0 16px;
-  background-color: rgba(0, 0, 0);
-
-  @media (min-width: 768px) {
-    padding: 0 16px;
-    backdrop-filter: blur(5px);
-    background-color: rgba(0, 0, 0, 0.1);
-  }
 }
 
 .menu_mobile {
-  display: flex;
   width: 100%;
+  height: 100%;
+  display:flex;
   justify-content: space-between;
   align-items: center;
-  @media (min-width: 768px) {
-    display: none;
-  }
-}
-
-.logo {
-  width: 50px;
-  height: 40px;
-  margin: 4px 0;
 
   @media (min-width: 768px) {
     display: none;
   }
 }
 
-.login {
-  @media (min-width: 768px) {
-    display: none;
-  }
+.logo_mobile img{
+  width: 60px;
 }
 
-.logo_large {
-  padding: 8px 0;
-
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
 .menu_desktop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   @media (max-width: 768px) {
     display: none;
   }
 }
 
-.menu_desktop ul {
+.links ul {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
+
+
