--- a/app/globals.css
+++ b/app/globals.css
@@ -13,88 +13,24 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: Segoe UI, Segoe UI Midlevel, sans-serif;
   background-color: var(--background);
   color: var(--color-white);
+
 }
 
 @layer base {
   :root {
     --background: #15151e;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-    --primary-color: #f59e0b;
-    /* --primary-color: #d1b000; */
-    --primary-content-color: #d1d5dc;
-    --secondary-color: #e53025;
-    --tertiary-color: #2b71b7;
     --color-white: #fff;
     --color-black: #000;
-    --h1-size-mobile: 18px;
-    --h1-size: 32px;
-    --h2-size: 24px;
-    --h2-size-mobile: 20px;
-    --h3-size: 18px;
-    --h3-size-mobile: 16px;
-
-    --post-title-weight: 700;
-
-    --padding-container-mobile: 16px;
-    --margin-container-mobile: 8px;
-    --padding-container-desktop: 16px;
-    --margin-container-desktop: 16px;
-
-    --post-text-content-size: 16px;
-    --post-text-content-size-mobile: 14px;
+    --card-background: #1C1C26;
+    --text-primary:#E0E0E6;
+    --text-secundary:#B0B0BA;
+    --text-off: #88889A;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --background: #15151e;
   }
 }
 
