--- a/app/main/components/magazine/Magazine.module.css
+++ b/app/main/components/magazine/Magazine.module.css
@@ -1,90 +1,83 @@
 .container {
   max-width: 1622px;
-  border-radius: 8px;
-  margin-bottom: 16px;
+  padding: 8px;
 
   @media (min-width: 1200px) {
-    padding: 20px;
-    margin: 0 8px;
-    margin-left: 16px;
-    margin-right: 16px;
+    max-width: 1200px;
+    margin: 0 auto;
   }
   @media (min-width: 1500px) {
+    max-width: 1600px;
     margin: 0 auto;
   }
 }
 
 .bento {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(1, 380px);
+  grid-template-columns: repeat(2, 1fr);
   gap: 8px;
 
-  @media (min-width: 768px) {
-    grid-template-rows: repeat(1, 320px);
+  @media (min-width: 426px) {
+    grid-template-columns: repeat(3, 1fr);
   }
-
-  @media (min-width: 1500px) {
-    grid-template-rows: repeat(1, 320px);
-    grid-template-columns: repeat(11, 1fr);
-  }
-}
-
-.bento_item {
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  transition: transform 0.2s ease;
-}
-
-.bento_item_large {
-  grid-column: span 12;
-  @media (min-width: 1200px) {
-    grid-column: span 6;
+  @media (min-width: 769px) {
+    grid-template-columns: repeat(5, 1fr);
   }
   @media (min-width: 1500px) {
-    grid-column: span 5;
-  }
-}
-.bento_item_small {
-  grid-column: span 6;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-
-  @media (min-width: 1200px) {
-    grid-column: span 3;
-  }
-
-  @media (min-width: 1500px) {
-    grid-column: span 2;
+    grid-template-columns: repeat(6, 1fr);
   }
 }
 
-.bento_item_image {
+.bento_principal {
+  grid-column: 1/3;
+  background-color: #000;
+  border-radius: 10px;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
-  border-radius: 8px;
-  grid-row: span 2;
-}
+  height: 304px;
 
-.bento_item_image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  @media (min-width: 426px) {
+    grid-column: 1/4;
+  }
 
-.bento_item_image_title {
-  grid-row: span 1;
-  padding: 8px;
-}
-
-.bento_item_image_title h1 {
-  color: #fff;
-  font-weight: bold;
-  text-wrap: wrap;
-  line-height: 1.2;
-  cursor: pointer;
-
-  @media (min-width: 1200px) {
+  @media (min-width: 769px) {
+    grid-column: 1/4;
   }
 }
+
+
+
+.bento > article { 
+  display: block;               /* por defecto, visibles */
+}
+
+.bento > article:nth-of-type(n + 6) {
+  display: none;
+}
+
+@media (min-width: 426px) {
+  .bento > article:nth-of-type(-n+7) { 
+    display: block;             /* re-muestra 1..7 */
+  }
+  .bento > article:nth-of-type(n+8) {
+    display: none;              /* oculta 8..∞ */
+  }
+}
+
+@media (min-width: 1025px) {
+  .bento > article:nth-of-type(-n+8) { 
+    display: block;             /* re-muestra 1..7 */
+  }
+  .bento > article:nth-of-type(n+9) {
+    display: none;              /* oculta 8..∞ */
+  }
+}
+
+@media (min-width: 1500px) {
+  .bento > article:nth-of-type(-n+10) { 
+    display: block;             /* re-muestra 1..7 */
+  }
+  .bento > article:nth-of-type(n+11) {
+    display: none;              /* oculta 8..∞ */
+  }
+}
+
